--- a/Flash Chat/CustomThreadCell.xib
+++ b/Flash Chat/CustomThreadCell.xib
@@ -12,47 +12,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CustomThreadCell" customModule="Flash_Chat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="CustomThreadCell" customModule="Flash_Chat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EX6-8a-4Nj">
-                        <rect key="frame" x="0.0" y="-1" width="45" height="45.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LHk-Ns-2lY">
+                        <rect key="frame" x="0.0" y="17.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="45" id="0C2-6n-6gA"/>
-                            <constraint firstAttribute="height" constant="45" id="Bih-Ci-ZR4"/>
+                            <constraint firstAttribute="width" constant="45" id="D3T-iz-Pnw"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="Mm1-jg-Ekd"/>
+                            <constraint firstAttribute="height" constant="45" id="brk-gI-ctd"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kpr-Xm-TmL">
-                        <rect key="frame" x="45" y="0.0" width="275" height="43.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbf-O3-tW3">
+                        <rect key="frame" x="45" y="0.0" width="275" height="79.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Kpr-Xm-TmL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2CX-JI-vum"/>
-                    <constraint firstItem="EX6-8a-4Nj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Kw1-Wy-MqJ"/>
-                    <constraint firstItem="Kpr-Xm-TmL" firstAttribute="leading" secondItem="EX6-8a-4Nj" secondAttribute="trailing" id="eXN-Rv-srE"/>
-                    <constraint firstItem="EX6-8a-4Nj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lcN-sS-L7D"/>
-                    <constraint firstAttribute="bottom" secondItem="Kpr-Xm-TmL" secondAttribute="bottom" id="oM7-iT-7qS"/>
-                    <constraint firstAttribute="trailing" secondItem="Kpr-Xm-TmL" secondAttribute="trailing" id="rxQ-u2-mcH"/>
+                    <constraint firstItem="Xbf-O3-tW3" firstAttribute="leading" secondItem="LHk-Ns-2lY" secondAttribute="trailing" id="1Aa-48-kAU"/>
+                    <constraint firstAttribute="bottom" secondItem="Xbf-O3-tW3" secondAttribute="bottom" id="3I7-DH-fLc"/>
+                    <constraint firstAttribute="bottom" secondItem="Xbf-O3-tW3" secondAttribute="bottom" id="9DD-GU-Xdf"/>
+                    <constraint firstItem="LHk-Ns-2lY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MpO-b0-idI"/>
+                    <constraint firstItem="LHk-Ns-2lY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XyD-Ru-pxz"/>
+                    <constraint firstAttribute="trailing" secondItem="Xbf-O3-tW3" secondAttribute="trailing" id="eee-wr-KOH"/>
+                    <constraint firstItem="LHk-Ns-2lY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hnr-2m-kl3"/>
+                    <constraint firstItem="Xbf-O3-tW3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ijc-Ug-wVo"/>
+                    <constraint firstAttribute="trailing" secondItem="Xbf-O3-tW3" secondAttribute="trailing" id="ths-uR-U5S"/>
+                    <constraint firstItem="Xbf-O3-tW3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xsc-Om-AGM"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="userAvatar" destination="EX6-8a-4Nj" id="L4r-dL-eHJ"/>
-                <outlet property="userName" destination="Kpr-Xm-TmL" id="emU-DD-TQf"/>
+                <outlet property="userAvatar" destination="LHk-Ns-2lY" id="P08-sb-fcl"/>
+                <outlet property="userName" destination="Xbf-O3-tW3" id="fid-zi-fRU"/>
             </connections>
-            <point key="canvasLocation" x="47.826086956521742" y="34.821428571428569"/>
+            <point key="canvasLocation" x="47.826086956521742" y="46.875"/>
         </tableViewCell>
-        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="h9a-4l-LJM">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <point key="canvasLocation" x="213" y="61"/>
-        </imageView>
     </objects>
 </document>
