--- a/Flash Chat/Main.storyboard
+++ b/Flash Chat/Main.storyboard
@@ -232,7 +232,6 @@
                     <connections>
                         <outlet property="emailTextfield" destination="ZWF-xv-G1L" id="A9I-P9-2rL"/>
                         <outlet property="passwordTextfield" destination="zuQ-XP-4Q7" id="FBf-fZ-iYp"/>
-                        <segue destination="vXZ-lx-hvc" kind="push" identifier="goToChat" id="rRW-Qd-PQi"/>
                         <segue destination="o7g-gL-uk7" kind="push" identifier="goToThreads" id="0nL-SI-3nF"/>
                     </connections>
                 </viewController>
@@ -327,7 +326,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2129" y="-341"/>
+            <point key="canvasLocation" x="2050" y="493"/>
         </scene>
         <!--Conversations-->
         <scene sceneID="Gqp-T0-akc">
@@ -362,11 +361,12 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="threadsTableView" destination="pPj-nL-CZX" id="jHz-w2-BWc"/>
+                        <segue destination="vXZ-lx-hvc" kind="push" identifier="goToMessages" id="sZ3-FS-U1M"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a7U-yh-fOK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2034" y="424"/>
+            <point key="canvasLocation" x="1985" y="-298"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kGX-IT-aXC">
